objects/tffa__AgentDetail__c.object
<CustomObject>
    <description>Captures additional details of party who is playing a role of an AGENT in the application.  Agent is a party who is not the applicant in the application but assisting or facilititing certain operations in the application flow. Agent can be real estate agent, broker,
        builder, closer, lender in mortgage applications, similarly evaluator, insurance agent in SMB applications.</description>
    <fields>
        <fullName>CZOfficerNbr__c</fullName>
        <description>Officer Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCode__c</fullName>
        <description>Brand Code for the User</description>
        <formula>tffa__Brand__r.tffa__Code__c</formula>
        <inlineHelpText>Brand Code</inlineHelpText>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current brand of the agent/user</description>
        <label>Brand</label>
        <referenceTo>tffa__Brand__c</referenceTo>
        <relationshipLabel>Agent Details</relationshipLabel>
        <relationshipName>AgentDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Channel__c</fullName>
        <description>The channel of operation of the current user. This will be used to default to the submission</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ClosingAgentType__c</fullName>
        <description>This designates the type of the closing agent.</description>
        <label>Closing agent type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ClosingAgentType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditUnionIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the lender is a Credit Union</description>
        <label>Credit union indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system for the agent</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IdentifierAuthorityLevelType__c</fullName>
        <description>Level of authority of the license identifier</description>
        <label>Identifier authority type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__IdentifierAuthorityLevelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IdentifierDescription__c</fullName>
        <description>The name describing the organization or registry that maintains the identification number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Identifier description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IdentifierExpiryDate__c</fullName>
        <description>Where applicable, the date of expiry for the identification record associated with the identification number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Identifier expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__IdentifierIssueDate__c</fullName>
        <description>Where applicable, the date of issue for the identification record associated with the identification number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Identifier issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__IdentifierIssuingAuthority__c</fullName>
        <description>The issuing authority of the identification document, example Homeowners association beareau</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Identifier issuing authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IdentifierIssuingState__c</fullName>
        <description>State which issued the identification document.</description>
        <label>Identifier issuing state</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IdentifierValue__c</fullName>
        <description>The unique identifier assigned to the party role/skill</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Identifier value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LoanOriginatorType__c</fullName>
        <description>Specifies the type of party that originated the loan.</description>
        <label>Loan originator type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__LoanOriginatorType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__LocationCode__c</fullName>
        <description>Unique code of the current geographical location/branch of the user.</description>
        <formula>tffa__Location__r.tffa__Code__c</formula>
        <label>Location(Branch) code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current geographical location of the agent/user.</description>
        <label>Location</label>
        <referenceTo>tffa__Location__c</referenceTo>
        <relationshipLabel>Agent Details</relationshipLabel>
        <relationshipName>AgentDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OtherDescription__c</fullName>
        <description>A free-form alphanumeric string which contains a supplemental comment or remark regarding the Party skill Type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to related party.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Agent Details</relationshipLabel>
        <relationshipName>AgentDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RealEstateAgentType__c</fullName>
        <description>Describes the type of real estate agent.</description>
        <label>Real estate agent type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RealEstateAgentType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SkillAdditionalDescription__c</fullName>
        <description>A free-form alphanumeric string which contains a supplemental comment or remark regarding the Party skill Type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Skill additional description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Skills__c</fullName>
        <description>A value from a MISMO defined list that identifies the role that the party plays in the transaction. Parties may be either a person or legal entity. A party may play multiple roles in a transaction.A value from a MISMO defined list that identifies the role that the party
        plays in the transaction. Parties may be either a person or legal entity. A party may play multiple roles in a transaction.</description>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SkillType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>Optional field to store the source of the agent details.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__UserEmail__c</fullName>
        <description>Denormalized Email field of User</description>
        <formula>tffa__User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to related User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>AgentDetail</relationshipLabel>
        <relationshipName>AgentDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Agent Detail</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__User__c</columns>
        <columns>tffa__Channel__c</columns>
        <columns>tffa__Brand__c</columns>
        <columns>tffa__Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Agents</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>